Small fix jumping buttons in contacts list

--- a/html/detox-chat-app-sidebar-contacts/style.scss
+++ b/html/detox-chat-app-sidebar-contacts/style.scss
@@ -136,7 +136,7 @@ csw-group {
 	csw-group {
 		.contact-item {
 			csw-icon {
-				display : inline-block;
+				display : inline-flex;
 			}
 		}
 	}
